--- a/Salery versus num of childeren.ipynb
+++ b/Salery versus num of childeren.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "e2c20c51",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "f6d672d2",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "c5685201",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "       3, 1, 2, 0, 3, 5, 3, 5, 1, 0, 4, 4, 3, 4, 5, 2, 0, 2], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "f2da1005",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "2e8a8cb2",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "d04348d9",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "f79d00f7",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "array([-0.05,  1.05])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "64ba21c1",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "f69490a8",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "0.060956586371875"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "0672b2f1",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "bf10eb34",
    "metadata": {},
    "outputs": [
@@ -243,25 +243,23 @@
        "       14.83088307, 15.16388717, 15.50059497, 15.84100648, 16.18512169])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "j = []\n",
+    "j = np.array([])\n",
     "\n",
     "for i in w:\n",
-    "    j.append(compute_cost(scaled_x , scaled_y, i, b))\n",
-    "             \n",
-    "j = np.array(j)\n",
+    "    j = np.append(j, compute_cost(scaled_x , scaled_y, i, b))\n",
     "\n",
     "j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "03b787e3",
    "metadata": {},
    "outputs": [
